feat: getting configs endpoints updated & general one added
